<resources>
    <string name="app_name">spinner</string>
    <string name="ed1_lab">Primer Valor</string>
    <string name="ed2_lab">Segundo Valor</string>
    <string name="btn_lab">Calcular</string>
    <string name="txt2ndaAct">Ir a Página Principal</string>
    <string name="btnRegresar">Regresar</string>
    <string name="nombre">Nombre</string>
    <string name="email">Correo electrónico</string>
    <string name="btn_mail">Guardar</string>
    <string name="title_activity_navegation_drawer">NavegationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
